--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Anusha",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
